<resources>
    <string name="app_name">AlmullaExchange_Demo</string>
    <string name="demo_app">DEMO APP</string>
    <string name="google_signIn">Sign In by Google</string>
    <string name="logout">Logout</string>
    <string name="something_wrong">Something Went Wrong!</string>
    <string name="change_language">Change Language</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="encrypted_decrypted_string">Encrypted / Decrypted String</string>
    <string name="no_todo_tasks">No TODO Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="radioArabic">Arabic</string>
    <string name="radioEng">English</string>
    <string name="welcome">Welcome </string>
    <string name="to_do">To-Do</string>
    <string name="encryption">Encryption</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="message">Message</string>
    <string name="secret_key">Secret Key</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure you want to delete this task?</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="task_name">Task Name</string>
    <string name="date_and_time">Date and Time</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>