<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".toDo.todoAdd.Todo_Act">

    <TextView
        android:id="@+id/txtName"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:paddingStart="16dp"
        android:onClick="backAdd"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/add_task"
        android:layout_width="match_parent"
        app:drawableStartCompat="@drawable/ic_back"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/view1"
        android:layout_below="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/textColor"/>

    <LinearLayout
        android:layout_below="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:lines="3"
            android:padding="8dp"
            android:background="@drawable/curve_bg"
            android:hint="@string/task_name" />

        <Button
            android:id="@+id/btn_dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="@drawable/curve_bg"
            android:fontFamily="casual"
            android:text="@string/date_and_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/save"
                android:onClick="addData"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:background="@drawable/curve_bg"
                android:layout_marginRight="10dp" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:textColor="@color/black"
                android:background="@drawable/curve_bg"
                android:text="@string/clear"
                android:onClick="clearData"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>