<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/activity_drawer"
    tools:context=".Simple_Encryption_Decryption">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/b1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:layout_margin="8dp"
            android:onClick="openNav"
            android:src="@drawable/ic_hamburgerrr" />

        <TextView
            android:id="@+id/txtName"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            tools:ignore="RtlSymmetry" />

        <View
            android:id="@+id/view1"
            android:layout_below="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/textColor"/>

        <EditText
            android:id="@+id/et_message"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/curve_bg"
            android:layout_below="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:hint="@string/message"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            tools:ignore="RtlSymmetry"  />


        <EditText
            android:id="@+id/et_secretKey"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:background="@drawable/curve_bg"
            android:layout_below="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/secret_key"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_marginTop="36dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginRight="24dp"
            android:id="@+id/linearLay"
            android:layout_below="@+id/et_secretKey"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/encryption"
                android:text="@string/encrypt"
                android:onClick="encryptText"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/curve_bg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp" />

            <Button
                android:id="@+id/decryption"
                android:text="@string/decrypt"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:onClick="decryptText"
                android:background="@drawable/curve_bg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtoutput"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:layout_below="@+id/linearLay"
            android:text="@string/encrypted_decrypted_string"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:isScrollContainer="true"
            android:layout_marginBottom="8dp"
            android:layout_above="@+id/i1"/>

        <include
            android:id="@+id/i1"
            android:layout_height="64dp"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            layout="@layout/bottomnav2"/>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff"
        app:headerLayout="@layout/email_resource"
        android:id="@+id/nv">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/v1"
                android:layout_marginTop="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E5E5E5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true" />

            <Button
                android:layout_below="@+id/v1"
                android:layout_marginTop="8dp"
                android:gravity="left|center"
                android:layout_marginLeft="24dp"
                android:textStyle="bold"
                android:background="#00FFFFFF"
                android:id="@+id/btn1"
                android:onClick="changeLanguge"
                android:text="@string/change_language"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp" />

            <View
                android:id="@+id/v2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/btn1"
                android:layout_marginTop="8dp"
                android:background="#E5E5E5" />

            <Button
                android:layout_below="@+id/v2"
                android:gravity="left|center"
                android:layout_marginLeft="24dp"
                android:id="@+id/btn2"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:background="#00FFFFFF"
                android:text="@string/logout"
                android:onClick="logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp" />

            <View
                android:id="@+id/v3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/btn2"
                android:layout_marginTop="8dp"
                android:background="#E5E5E5" />

            <TextView
                android:id="@+id/txtVersion"
                android:layout_centerInParent="true"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="Version"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>


    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>