<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/activity_drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".toDo.ToDo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/b1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:layout_margin="8dp"
            android:onClick="openNav"
            android:src="@drawable/ic_hamburgerrr" />

        <TextView
            android:id="@+id/txtName"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            tools:ignore="RtlSymmetry" />

        <View
            android:id="@+id/view1"
            android:layout_below="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/textColor"/>

        <RelativeLayout
            android:layout_below="@+id/view1"
            android:layout_above="@+id/i1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.tsuryo.swipeablerv.SwipeableRecyclerView
                android:id="@+id/rv_List"
                android:padding="16dp"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                app:rightBgColor="@color/white"
                app:rightText="@string/delete"
                app:textColor="@android:color/black"
                app:textSize="18sp" />

            <TextView
                android:visibility="gone"
                android:id="@+id/txtView"
                android:layout_margin="8dp"
                android:text="@string/no_todo_tasks"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:textSize="24dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_addd"
                android:onClick="todoTask"
                app:fabSize="normal"
                android:layout_margin="16dp"
                android:layout_alignParentRight="true" />


        </RelativeLayout>

        <include
            android:id="@+id/i1"
            android:layout_height="64dp"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            layout="@layout/bottomnav2"/>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff"
        app:headerLayout="@layout/email_resource"
        android:id="@+id/nv">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/v1"
                android:layout_marginTop="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E5E5E5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true" />

            <Button
                android:layout_below="@+id/v1"
                android:layout_marginTop="8dp"
                android:gravity="left|center"
                android:layout_marginLeft="24dp"
                android:textStyle="bold"
                android:background="#00FFFFFF"
                android:id="@+id/btn1"
                android:onClick="changeLanguge"
                android:text="@string/change_language"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp" />

            <View
                android:id="@+id/v2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/btn1"
                android:layout_marginTop="8dp"
                android:background="#E5E5E5" />

            <Button
                android:layout_below="@+id/v2"
                android:gravity="left|center"
                android:layout_marginLeft="24dp"
                android:id="@+id/btn2"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:background="#00FFFFFF"
                android:text="@string/logout"
                android:onClick="logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp" />

            <View
                android:id="@+id/v3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/btn2"
                android:layout_marginTop="8dp"
                android:background="#E5E5E5" />

            <TextView
                android:id="@+id/txtVersion"
                android:layout_centerInParent="true"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="Version"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>


    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>